@@ -1,3 +1,6 @@
+11.aug (ws)
+      - fix #12047: Page Settings Preview doesn't udate
+      - new: page selector for page settings preview
 10.aug (ws)
       - new: scrollbar for navigator window
 5.aug (ws)
